added goal traker

--- a/lib/mailappointmentsuccess.ejs
+++ b/lib/mailappointmentsuccess.ejs
@@ -65,71 +65,52 @@
         </div>
         
         <div class="content">
-            <h2>Thank you, <%= formData.name %>!</h2>
+            <h2>Thank you, <%= formData_name %>!</h2>
             <p>Your appointment has been successfully scheduled. Here are your appointment details:</p>
             
             <div class="appointment-details">
                 <h3>Appointment Information</h3>
-                <p><strong>Date:</strong> <%= formData.date %></p>
-                <p><strong>Time:</strong> <%= formData.time %></p>
-                <p><strong>Patient Name:</strong> <%= formData.name %></p>
-                <p><strong>Gender:</strong> <%= formData.gender %></p>
-                <p><strong>Date of Birth:</strong> <%= formData.birthdate %></p>
+                <p><strong>Date:</strong> <%= formData_date %></p>
+                <p><strong>Time:</strong> <%= formData_time %></p>
+                <p><strong>Patient Name:</strong> <%= formData_name %></p>
+                <p><strong>Gender:</strong> <%= formData_gender %></p>
+                <p><strong>Date of Birth:</strong> <%= formData_birthdate %></p>
                 
                 <h4>Contact Information</h4>
-                <p><strong>Mobile:</strong> <%= formData.mobile %></p>
-                <% if (formData.altMobile) { %>
-                <p><strong>Alternative Number:</strong> <%= formData.altMobile %></p>
+                <p><strong>Mobile:</strong> <%= formData_mobile %></p>
+                <% if (formData_altMobile) { %>
+                <p><strong>Alternative Number:</strong> <%= formData_altMobile %></p>
                 <% } %>
-                <p><strong>Email:</strong> <%= formData.email %></p>
+                <p><strong>Email:</strong> <%= formData_email %></p>
                 
                 <h4>Address</h4>
-                <p><%= formData.address %></p>
-                <p><%= formData.city %>, <%= formData.state %> - <%= formData.pincode %></p>
+                <p><%= formData_address %></p>
+                <p><%= formData_city %>, <%= formData_state %> - <%= formData_pincode %></p>
             </div>
 
             <div class="medical-info">
                 <h3>Medical Information</h3>
-                <% if (formData.medicalInformation.length > 0) { %>
-                <p><strong>Medical Conditions:</strong> <%= formData.medicalInformation.join(', ') %></p>
-                <% if (formData.otherMedicalInformation) { %>
-                <p><strong>Other Conditions:</strong> <%= formData.otherMedicalInformation %></p>
+                <% if (formData_medicalInformation.length > 0) { %>
+                <p><strong>Medical Conditions:</strong> <%= formData_medicalInformation.join(', ') %></p>
+                <% if (formData_otherMedicalInformation) { %>
+                <p><strong>Other Conditions:</strong> <%= formData_otherMedicalInformation %></p>
                 <% } %>
                 <% } %>
                 
-                <% if (formData.medicines.length > 0) { %>
-                <p><strong>Current Medications:</strong> <%= formData.medicines.join(', ') %></p>
-                <% if (formData.othermedicines) { %>
-                <p><strong>Other Medications:</strong> <%= formData.othermedicines %></p>
+                <% if (formData_medicines.length > 0) { %>
+                <p><strong>Current Medications:</strong> <%= formData_medicines.join(', ') %></p>
+                <% if (formData_othermedicines) { %>
+                <p><strong>Other Medications:</strong> <%= formData_othermedicines %></p>
                 <% } %>
                 <% } %>
                 
-                <p><strong>Allergies:</strong> <%= formData.allergy === 'Yes' ? 'Yes' : 'No' %></p>
-                <p><strong>Physician Contact:</strong> <%= formData.physiciannumber %></p>
+                <p><strong>Allergies:</strong> <%= formData_allergy === 'Yes' ? 'Yes' : 'No' %></p>
+                <p><strong>Physician Contact:</strong> <%= formData_physiciannumber %></p>
             </div>
 
-            <h3>Important Notes:</h3>
-            <ul>
-                <li>Please arrive 15 minutes before your scheduled appointment time</li>
-                <li>Bring any relevant medical records or imaging reports</li>
-                <li>Wear comfortable clothing suitable for physical examination</li>
-                <li>If you need to reschedule, please contact us at least 24 hours in advance</li>
-            </ul>
-
-            <p>If you need to make any changes to your appointment or have any questions, please contact our clinic at [CLINIC_PHONE_NUMBER].</p>
-
-            <p>Best regards,<br>[CLINIC_NAME] Team</p>
         </div>
 
-        <div class="footer">
-            <p>&copy; 2025 [CLINIC_NAME]. All rights reserved.</p>
-            <p>This email was sent to <%= formData.email %>. Please do not reply to this email.</p>
-            <p>
-                [CLINIC_ADDRESS]<br>
-                Phone: [CLINIC_PHONE]<br>
-                Email: [CLINIC_EMAIL]
-            </p>
-        </div>
+
     </div>
 </body>
 </html>
